--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <li class="advantage-item">
                     <div class="advantage-box">
                     <svg class="advantage-icons" width="64" height="64">
-                    <use href="./images/ikon.svg#icon-diagram"></use>
+                    <use href="./images/ikons.svg#icon-diagram"></use>
                 </svg>
             </div>
                     <h3 class="advantage-item-title">Diligence</h3>
@@ -222,7 +222,7 @@
         <div class="container">
         <h2 class="portfolio-title">Our Portfolio</h2>  
         <ul class="portfolio-list">
-            <l transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);i class="portfolio-item">
+            <li class="portfolio-item">
                 <div class="portfolio-picture-box">
                 <img class="portfolio-item-picture" src="./images/portfolio-1.jpg" alt="Banking App" width="360" height="300">
                 <p class="portfolio-cover-picture">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -232,7 +232,7 @@
                     <h3 class="portfolio-item-title">Banking App</h3>
                     <p class="portfolio-item-text">App</p>
                 </div>
-            </l>
+            </li>
             <li class="portfolio-item">
                 <div class="portfolio-picture-box">
                     <img class="portfolio-item-picture" src="./images/portfolio-2.jpg" alt="Cashless Payment" width="360" height="300">
